Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127296

The return values of QMimeData::hasFormat() and QMimeData::data() are inconsistent with the documentation.

    XMLWordPrintable

Details

    • 05aaf2a68 (dev), 5f4666917 (6.8)

    Description

      The return values of QMimeData::hasFormat() and QMimeData::data() are inconsistent with the documentation. The following lines have return values that do not match the documentation:

      QMimeData mimeData;
      
          mimeData.setData( "text/uri-list", "test" );
      
          qDebug() << "mimeData.hasFormat( \"text/plain\" )" << mimeData.hasFormat( "text/plain" );
      
          qDebug() << "mimeData.data( \"text/plain\" )" << mimeData.data( "text/plain" );
      
          qDebug() << "mimeData.hasFormat( \"text/uri-list\" )" << mimeData.hasFormat( "text/uri-list" );
      
          qDebug() << "mimeData.data( \"text/uri-list\" )" << mimeData.data( "text/uri-list" );
      
          qDebug() << "mimeData.hasText()" << mimeData.hasText();
      
          qDebug() << "mimeData.text()" << mimeData.text();
      

      Attachments

        For Gerrit Dashboard: QTBUG-127296
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            mahdi.belila Mehdi Belila
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes