QMimeData/Docs: include the fact that some functions may convert

QMimeDataPrivate::retrieveTypedData() converts if the target MIME type
is text/plain or if the target meta type is QByteArray.

Fixes: QTBUG-127296
Change-Id: I4878533dcb2d4b3e8efefffd17e49ade9fbb32f8
Reviewed-by: David Faure <david.faure@kdab.com>
(cherry picked from commit 05aaf2a684e49d6034f3860fb55a70e75de61e49)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>